fake seeds added, fixed some view issues

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,6 +3,7 @@
 <% @restaurant.reviews.each do |review| %>
   <li class="list-group-item">
     <%= review.content %> |
+    <%= review.rating %> |
     <%= link_to "Destroy",
           review_path(review),
           method: :delete,
