--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -8,6 +8,7 @@
       <th>Name</th>
       <th>Address</th>
       <th>Phone Number</th>
+      <th>Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
